feat: logout owner endpoint
